--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -1,26 +1,16 @@
 template: testify
 
 packages:
-  lesson1/internal/compute:
-    interfaces:
-      QueryCompute:
-      CommandCompute:
-    config:
-      dir: "{{.InterfaceDir}}/mocks"
-      filename: "compute_mock_auto.go"
-      pkgname: "compute_test"
-      formatter: gofmt
+  # spyder/internal/cli:
+  #   interfaces:
+  #     CommandHandler:
+  #   config:
+  #     dir: "{{.InterfaceDir}}/mocks"
+  #     filename: "cli_mock.go"
+  #     pkgname: "cli_test"
+  #     formatter: gofmt
 
-  lesson1/internal/cli:
-    interfaces:
-      CommandHandler:
-    config:
-      dir: "{{.InterfaceDir}}/mocks"
-      filename: "cli_mock.go"
-      pkgname: "cli_test"
-      formatter: gofmt
-
-  lesson1/internal/database/storage:
+  spyder/internal/database/storage:
     interfaces:
       CommandStorage:
       QueryStorage:
@@ -28,4 +18,14 @@ packages:
       dir: "{{.InterfaceDir}}/mocks"
       filename: "storage_mock.go"
       pkgname: "storage_test"
+      formatter: gofmt
+
+  spyder/internal/database:
+    interfaces:
+      ComputeLayer:
+      StorageLayer:
+    config:
+      dir: "{{.InterfaceDir}}/mocks"
+      filename: "database_mock.go"
+      pkgname: "database_test"
       formatter: gofmt
